feat & refactor:Set up image views and reorganized project structure
- Implemented the createImageViews function to create image views for the swap chain images.
  - Configured the VkImageViewCreateInfo structure.
  - Set up component mapping to VK_COMPONENT_SWIZZLE_IDENTITY.
  - Defined subresource range to include the color aspect of the image.
  - Created image views and stored them in the swapChainImageViews vector.
- Reorganized project structure:
  - Changed the Visual Studio project name for better project organization and clarity.
- Updated the cleanup function to destroy image views properly before destroying the swap chain.

--- a/VulkanProject/VulkanProject.vcxproj
+++ b/VulkanProject/VulkanProject.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{09184be6-765a-4cf9-bdaf-9ee49f293309}</ProjectGuid>
     <RootNamespace>VulkanTest</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>VulkanProject</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
